--- a/html/lec006/main/index.html
+++ b/html/lec006/main/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <img src="download.jpg" />
-    <img src="/1.jpg" />
+    <img src="../1.jpg" />
     <img src="assets/download.jpg" />
     <p>
       His Majesty's Theatre is a West End theatre situated in the Haymarket in
